--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
+  "type": "module",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "node-fetch": "^3.3.2",
-     "type": "module"
-    
+    "node-fetch": "^3.3.2"
   },
   "scripts": {
-  "start": "node server.js"
-}
+    "start": "node server.js"
+  }
 }
